Fix inconsistent border radius across application (#555)
- Standardized border radius for cards and UI elements
- Updated liquid-glass tab bar styling to match modern iOS design
- Applied consistent corner radius across InformationScreenVC, SettingsViewController, TipCardView, and table view cells
- Ensures uniform appearance across iOS 26 Simulator

Fixes #555

--- a/Scribe/Base.lproj/AppScreen.storyboard
+++ b/Scribe/Base.lproj/AppScreen.storyboard
@@ -310,10 +310,10 @@
         <scene sceneID="sLs-HO-3by">
             <objects>
                 <tabBarController id="z4h-ME-igh" customClass="SwipeableTabBarController" customModule="SwipeableTabBarController" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" itemPositioning="fill" id="pcg-48-jfk">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="YES" itemPositioning="fill" id="pcg-48-jfk">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" name="lightWhiteDarkBlack"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="selectedImageTintColor" name="linkBlue"/>
                     </tabBar>
                     <connections>
