fix duplicated download screen in nav stack

--- a/Scribe/Base.lproj/AppScreen.storyboard
+++ b/Scribe/Base.lproj/AppScreen.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="24412" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="z4h-ME-igh">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="24506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="z4h-ME-igh">
     <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="24405"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="24504"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -16,7 +16,7 @@
             <objects>
                 <tableViewController id="4qA-Bq-SU4" customClass="AboutViewController" customModule="Scribe" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" id="6fu-7Z-I4m">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="695"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" name="scribeAppBackground"/>
                         <sections/>
@@ -40,7 +40,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WKP-ZG-fIn" userLabel="ScrollViewPad">
-                                <rect key="frame" x="0.0" y="100" width="375" height="644"/>
+                                <rect key="frame" x="0.0" y="88" width="375" height="661"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E9S-tJ-4qs" userLabel="ScrollContainerViewPad">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="351"/>
@@ -128,7 +128,7 @@
                                 <viewLayoutGuide key="frameLayoutGuide" id="cHX-BU-8Mr"/>
                             </scrollView>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="equ-8g-tuH" userLabel="ScrollViewPhone">
-                                <rect key="frame" x="0.0" y="100" width="375" height="644"/>
+                                <rect key="frame" x="0.0" y="88" width="375" height="661"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XYp-UM-US6" userLabel="ScrollContainerViewPhone">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="316.33333333333331"/>
@@ -236,11 +236,11 @@
             <objects>
                 <viewController id="cQF-42-ekB" userLabel="Settings" customClass="SettingsViewController" customModule="Scribe" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="rjV-Tb-pQl">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="695"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="R98-aa-uZS">
-                                <rect key="frame" x="0.0" y="162" width="375" height="533"/>
+                                <rect key="frame" x="0.0" y="150" width="375" height="545"/>
                                 <view key="tableFooterView" contentMode="scaleToFill" id="2AI-Eq-Aoc" userLabel="footerContainer">
                                     <rect key="frame" x="0.0" y="107" width="375" height="130"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -310,7 +310,7 @@
         <scene sceneID="sLs-HO-3by">
             <objects>
                 <tabBarController id="z4h-ME-igh" customClass="SwipeableTabBarController" customModule="SwipeableTabBarController" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="YES" itemPositioning="fill" id="pcg-48-jfk">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" itemPositioning="fill" id="pcg-48-jfk">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -331,31 +331,31 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="InstallationVC" customModule="Scribe" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="695"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eyk-EK-raM" userLabel="TopSpace">
-                                <rect key="frame" x="0.0" y="154" width="375" height="27"/>
+                                <rect key="frame" x="0.0" y="142" width="375" height="27.666666666666657"/>
                                 <color key="backgroundColor" systemColor="systemBrownColor"/>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ScribeLogo" translatesAutoresizingMaskIntoConstraints="NO" id="Oxz-Zq-2g7">
-                                <rect key="frame" x="103" y="181" width="169" height="81.333333333333314"/>
+                                <rect key="frame" x="101" y="169.66666666666666" width="173" height="83"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="Oxz-Zq-2g7" secondAttribute="height" multiplier="981:471" id="fLZ-Jn-Qjj"/>
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xOG-9z-mVQ" userLabel="LogoSpace">
-                                <rect key="frame" x="0.0" y="262.33333333333331" width="375" height="27"/>
+                                <rect key="frame" x="0.0" y="252.66666666666666" width="375" height="27.666666666666657"/>
                                 <color key="backgroundColor" systemColor="systemBrownColor"/>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jrH-BQ-4ti" userLabel="InstallationLabel">
-                                <rect key="frame" x="15" y="289.33333333333331" width="345" height="20.333333333333314"/>
+                                <rect key="frame" x="15" y="280.33333333333331" width="345" height="20.333333333333314"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z6Q-k0-ggs" userLabel="AppTextBkrdPad">
-                                <rect key="frame" x="15" y="313.66666666666669" width="345" height="304.00000000000006"/>
+                                <rect key="frame" x="15" y="304.66666666666669" width="345" height="304.00000000000006"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cWe-iO-9F6" userLabel="SettingsBtnPad">
                                         <rect key="frame" x="0.0" y="0.0" width="345" height="304"/>
@@ -403,7 +403,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uV9-hG-bLi" userLabel="AppTextBkrdPhone">
-                                <rect key="frame" x="15" y="313.66666666666669" width="345" height="255.33333333333331"/>
+                                <rect key="frame" x="15" y="304.66666666666669" width="345" height="255.33333333333331"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UpZ-Pp-c4F" userLabel="SettingsBtnPhone">
                                         <rect key="frame" x="0.0" y="0.0" width="345" height="255.33333333333334"/>
@@ -499,14 +499,14 @@
             </objects>
             <point key="canvasLocation" x="53.600000000000001" y="-836.45320197044339"/>
         </scene>
-        <!--app.about.title-->
+        <!--i18n.app.about.title-->
         <scene sceneID="6lj-MX-SxG">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="1wV-q3-U0F" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" tag="2" title="i18n.app.about.title" image="info.circle" catalog="system" id="U3y-iM-H0G"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="Jq3-G5-4j6">
-                        <rect key="frame" x="0.0" y="100" width="375" height="106"/>
+                        <rect key="frame" x="0.0" y="88" width="375" height="106"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" name="keyChar"/>
                         <color key="barTintColor" name="scribeAppBackground"/>
@@ -520,7 +520,7 @@
             </objects>
             <point key="canvasLocation" x="-1831.2" y="640.64039408866995"/>
         </scene>
-        <!--app.settings.title-->
+        <!--i18n.app.settings.title-->
         <scene sceneID="3xr-BX-tfK">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Ffy-3M-wWx" sceneMemberID="viewController">
@@ -529,7 +529,7 @@
                     </tabBarItem>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="IHJ-rg-pcl">
-                        <rect key="frame" x="0.0" y="100" width="375" height="106"/>
+                        <rect key="frame" x="0.0" y="88" width="375" height="106"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" name="keyChar"/>
                         <color key="barTintColor" name="scribeAppBackground"/>
@@ -548,7 +548,7 @@
             <objects>
                 <tableViewController storyboardIdentifier="TableViewTemplateViewController" id="ZA3-mW-CXa" customClass="TableViewTemplateViewController" customModule="Scribe" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" id="AcG-ai-d5x">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="695"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" name="scribeAppBackground"/>
                         <connections>
@@ -570,7 +570,7 @@
             <objects>
                 <tableViewController storyboardIdentifier="SelectionViewTemplateViewController" id="oOM-lN-cEA" userLabel="Selection View Template View Controller" customClass="SelectionViewTemplateViewController" customModule="Scribe" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" id="SS2-uh-4eH">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="695"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" name="scribeAppBackground"/>
                         <connections>
@@ -584,43 +584,24 @@
             </objects>
             <point key="canvasLocation" x="956" y="-100"/>
         </scene>
-        <!--app.installation.title-->
+        <!--i18n.app.installation.title-->
         <scene sceneID="2my-SI-kbz">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="lVT-tc-LdF" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="i18n.app.installation.title" image="keyboard" catalog="system" id="HNz-5D-1T0"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="04t-RY-ghe">
-                        <rect key="frame" x="0.0" y="100" width="375" height="54"/>
+                        <rect key="frame" x="0.0" y="88" width="375" height="54"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="m83-Ov-JKO" kind="relationship" relationship="rootViewController" id="Ijq-FZ-AI3"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="TMf-Dd-hkv"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MpS-P1-qZe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1831.2" y="-836.45320197044339"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="b2a-sJ-8WG">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="m83-Ov-JKO" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationItem key="navigationItem" id="nmU-tX-MuE"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="2Z6-K9-pyl">
-                        <rect key="frame" x="0.0" y="100" width="375" height="54"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="okW-AA-iFJ"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ued-CT-zP2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-888.79999999999995" y="-836.45320197044339"/>
         </scene>
     </scenes>
     <color key="tintColor" name="scribeAppBackground"/>
@@ -635,9 +616,6 @@
         </namedColor>
         <namedColor name="keyChar">
             <color red="0.0" green="0.0" blue="0.0" alpha="0.89999997615814209" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="lightWhiteDarkBlack">
-            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="linkBlue">
             <color red="0.16500000655651093" green="0.49399998784065247" blue="0.66699999570846558" alpha="0.89999997615814209" colorSpace="custom" customColorSpace="sRGB"/>
